package com.codingapi.txlcn.tc;

import com.codingapi.maven.uml.annotation.Model;

/**
 * @author lorne
 * @date 2020/3/5
 * @description
 */
@Model(flag = "C",value = "事务全局变量",color = "#FF88EE")
public class TransactionContent {

    public static final String LCN = "lcn";

}
